Grease pencil, envelope modifier. Can`t select points (edit mode), when modifier enabled. #96875

Closed
opened 2022-03-30 02:39:44 +02:00 by Vyacheslav Kobozev · 13 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-28 21:29, hash: 27424b758a

Short description of error
Add default stroke, add envelope modifier,
Go to edit mode, try to click/select/drag any point with tweak tool.
It is still possible to select with box.

2022-03-30_03-36-59.mp4

Steps to reproduce
#96875.blend

  • Open file
  • Enable modifier in viewport
  • Try to select different vertex
**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-28 21:29, hash: `27424b758a` **Short description of error** Add default stroke, add envelope modifier, Go to edit mode, try to click/select/drag any point with tweak tool. It is still possible to select with box. [2022-03-30_03-36-59.mp4](https://archive.blender.org/developer/F12955289/2022-03-30_03-36-59.mp4) **Steps to reproduce** [#96875.blend](https://archive.blender.org/developer/F12955450/T96875.blend) - Open file - Enable modifier in viewport - Try to select different vertex

Added subscriber: @Vyach

Added subscriber: @Vyach

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @HDMaster84, @antoniov

Added subscribers: @HDMaster84, @antoniov

@HDMaster84 IIRC, this is a known limitation, no?

@HDMaster84 IIRC, this is a known limitation, no?

BTW, there was a bug with the tweak tool not related to this modifier. Could you test if you can move using G key?

BTW, there was a bug with the tweak tool not related to this modifier. Could you test if you can move using `G` key?
Member

I have no trouble selecting it with box select. Clicking to select seems to be broken. So maybe the bug is somewhere in the selection code. Maybe it tries to select the non selectable strokes, as they are first in the list of strokes?

I have no trouble selecting it with box select. Clicking to select seems to be broken. So maybe the bug is somewhere in the selection code. Maybe it tries to select the non selectable strokes, as they are first in the list of strokes?
Vyacheslav Kobozev changed title from Grease pencil, envelope modifier. Can`t select points (elbt mode), when modifier enabled. to Grease pencil, envelope modifier. Can`t select points (edit mode), when modifier enabled. 2022-03-30 14:46:09 +02:00

In #96875#1332065, @antoniov wrote:
@HDMaster84 IIRC, this is a known limitation, no?

but I can see and move vertices, if I select em before.

In #96875#1332160, @HDMaster84 wrote:
I have no trouble selecting it with box select.

True, the same, so it is bug, specific to tweak tool.

> In #96875#1332065, @antoniov wrote: > @HDMaster84 IIRC, this is a known limitation, no? but I can see and move vertices, if I select em before. > In #96875#1332160, @HDMaster84 wrote: > I have no trouble selecting it with box select. True, the same, so it is bug, specific to tweak tool.

@HDMaster84 I have checked and the problem is using Envelope modifier and tweak select. If you use other modifer as Offset, you can select without problems. Check that you set the origpointers for the stroke and for the points you has created.

@HDMaster84 I have checked and the problem is using `Envelope` modifier and tweak select. If you use other modifer as `Offset`, you can select without problems. Check that you set the `orig`pointers for the stroke and for the points you has created.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Following the policy of "bug in new feature = high priority", will raise priority

Following the policy of "bug in new feature = high priority", will raise priority

The reason of the bug is that new created strokes in the envelope modifier is not setting the right pointer to original stroke and points.

When using Box select, the point selected are the original stroke because Box select try to select all points in the selected area, but the Tweak tool try to select only the point that is near and as the vertex of the new stroke (generated) and the old stroke (original) are in the same position, the point selected is the corresponding to the new created stroke by envelope modifier and this is not displayed.

I'm looking at the code and trying to assign right pointers.

The reason of the bug is that new created strokes in the envelope modifier is not setting the right pointer to original stroke and points. When using `Box` select, the point selected are the original stroke because `Box` select try to select all points in the selected area, but the `Tweak` tool try to select only the point that is near and as the vertex of the new stroke (generated) and the old stroke (original) are in the same position, the point selected is the corresponding to the new created stroke by envelope modifier and this is not displayed. I'm looking at the code and trying to assign right pointers.
Antonio Vazquez self-assigned this 2022-04-14 21:36:54 +02:00

This issue was referenced by 48ff456a4b

This issue was referenced by 48ff456a4bda98d73042b0ef85091cf79aad8647

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96875
No description provided.